# GenericSPI

./: CMakeLists.txt  README.md
inc/: SPI.h  SPI_HAL.h  SPI_HAL_DESKTOP.h  SPI_HAL_DESKTOP.hpp
src/: SPI.c  SPI_HAL_Desktop_Impl.cpp
